--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,15 @@
 h1{
   text-align: center;
 }
+/* Background image class for later use.
+body{
+  height: 100%;
+}
+.background{
+  background-image: url("images/IMG_0880.JPG");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+*/
