--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ p, h1 {
 
 .shapeForm {
   margin-top: 10px;
-  background-color: white;
+  background-color: green;
   border-radius: 10px;
   align-items:
 
